# phi-exposure-guard

./: .gitignore  README.md  citation.cff  pyproject.toml  requirements.txt
.github/workflows/: tests-artifact.yml
notebooks/: demo_colab.ipynb
patent/: architecture.md  impact_and_reproducibility.md  invention_summary.md  technical_distinction.md
results/: EXPERIMENT_REPORT.md  audit_checkpoints_adaptive.jsonl  audit_fhir_adaptive.jsonl  audit_log.jsonl  audit_log_signed_adaptive.jsonl  baseline_comparison.csv  dcpg_adaptive.sqlite  dcpg_crdt_demo.json  dcpg_snapshot.json  latency_summary.csv  policy_metrics.csv  rl_reward_stats.json  sample_dag.dot  sample_dag.json
results/sample_run/: EXPERIMENT_REPORT.md  audit_checkpoints_adaptive.jsonl  audit_fhir_adaptive.jsonl  audit_log.jsonl  audit_log_signed_adaptive.jsonl  dcpg_adaptive.sqlite  dcpg_snapshot.json  latency_summary.csv  policy_metrics.csv  rl_reward_stats.json  sample_dag.dot
src/: context_state.py  eval.py  flow_controller.py  masking_ops.py
src/amphi_rl_dpgraph/: __init__.py  audit_signing.py  baseline_experiment.py  cmo_media.py  cmo_registry.py  consent.py  context_state.py  controller.py  db.py  dcpg.py  dcpg_crdt.py  dcpg_federation.py  downstream_feedback.py  eval.py  flow_controller.py  masking.py  masking_ops.py  metrics.py  phi_detector.py  rl_agent.py  run_demo.py  schemas.py
src/amphi_rl_dpgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_audit_signing.py  test_baseline_experiment.py  test_cmo_media.py  test_cmo_registry.py  test_consent.py  test_context_state.py  test_context_state_accounting.py  test_controller.py  test_controller_decisions.py  test_db.py  test_dcpg.py  test_dcpg_crdt.py  test_dcpg_federation.py  test_demo_smoke.py  test_downstream_feedback.py  test_eval.py  test_flow_controller.py  test_masking.py  test_masking_dispatch.py  test_masking_ops.py  test_metrics.py  test_phi_detector.py  test_rl_agent.py  test_schemas.py  tests_imports.py
